# funky_scheduler

./: 1500pr_15st_x_6gr.yaml  15pr_3st_x_2gr.yaml  50pr_3st_x_6gr.yaml  60pr_4st_x_4gr.yaml  CMakeLists.txt  gen.rb  input.yaml
src/: common.hpp  funky_scheduler.cpp  graph.cpp  graph.hpp  input.cpp  input.hpp  logging.cpp  logging.hpp  schedule.cpp  schedule.hpp
